# ick_training

./: CMakeLists.txt  LICENSE  README.md
chapter_0/: CMakeLists.txt
chapter_0/include/: class_test.hpp
chapter_0/src/: class_test.cpp  main.cpp
chapter_1/: CMakeLists.txt
chapter_1/src/: comments.cpp  main_1_1.cpp  main_1_2.cpp  main_1_3.cpp  main_1_4.cpp  main_1_5.cpp  main_1_5_1.cpp  variable.cpp
chapter_2/: CMakeLists.txt
chapter_2/include/: functions.h  math_1_function.hh  math_function.hh
chapter_2/src/: main_2_1.cpp  main_2_2.cpp  main_2_2_demo.cpp  math_1_function.cpp  math_function.cpp  part_1.cc  part_2.cc  part_3.cc  test1.cc  test2.cc
stl_tutorials_/: CMakeLists.txt
stl_tutorials_/src/: search.cc  sort.cc
